<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DEDEDE"
    tools:context=".ui.home.MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvAccountInfoHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="8dp"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgHomeUserImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_margin="16dp"
                android:contentDescription="@string/cd_home_user_image"
                app:srcCompat="@drawable/ic_person_black"
                tools:srcCompat="@drawable/ic_person_black"/>

            <TextView
                android:id="@+id/tvHomeUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/imgHomeUserImage"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@+id/imgHomeUserImage"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                tools:text="Abdul Fatah"/>

            <TextView
                android:id="@+id/tvHomeAccountNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvHomeUserName"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/imgHomeUserImage"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="Account: GR4KS5SH235h"/>

            <TextView
                android:id="@+id/tvHomeBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgHomeUserImage"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                tools:text="Balance: $24,005.75"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvHomeMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:drawableStart="@drawable/ic_warning_black"
        android:drawablePadding="4dp"
        android:gravity="center"
        android:textColor="#D37611"
        android:textSize="16dp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/llHomeActionHolder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvAccountInfoHolder"
        tools:text="All banking operations to remain shut between 01:00 AM to 06:00 AM for maintainance"/>

    <ProgressBar
        android:id="@+id/pbHomeLoader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/cvAccountInfoHolder"
        app:layout_constraintEnd_toEndOf="@+id/cvAccountInfoHolder"
        app:layout_constraintStart_toStartOf="@+id/cvAccountInfoHolder"
        app:layout_constraintTop_toTopOf="@+id/cvAccountInfoHolder"/>

    <LinearLayout
        android:id="@+id/llHomeActionHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <LinearLayout
            android:id="@+id/llHomeImportantInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_rounded_border_white"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/cd_account_type_icon"
                android:src="@drawable/email_notification" />

            <TextView
                android:id="@+id/tvHomeImportantInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:text="@string/title_important_info"
                android:textColor="#2489A9"
                android:textSize="32sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llHomeAccountType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_rounded_border_white"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/cd_account_type_icon"
                android:src="@drawable/coin_deposit" />

            <TextView
                android:id="@+id/tvHomeAccountType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:text="@string/title_savings"
                android:textColor="#2489A9"
                android:textSize="32sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llHomePremiumAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_rounded_border_white"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/cd_account_type_icon"
                android:src="@drawable/premium_sign" />

            <TextView
                android:id="@+id/tvHomePremiumAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:text="@string/title_upgrade_to_premium"
                android:textColor="#2489A9"
                android:textSize="32sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llHomeTransactions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_rounded_border_white"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/cd_account_type_icon"
                android:src="@drawable/dollar_sign" />

            <TextView
                android:id="@+id/tvHomeTransactions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:text="@string/title_upgrade_to_premium"
                android:textColor="#2489A9"
                android:textSize="32sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>